# Genesis

./: .gitignore  README.md  autobuild-github.xml  autobuild.xml  compile.txt  deploy.xml  deploy.yml  variables
indra/: CMakeLists.txt
indra/aistatemachine/: CMakeLists.txt  aistatemachine.cpp  aistatemachinethread.cpp  aistatemachinethread.h
indra/cmake/: 00-Common.cmake  APR.cmake  Audio.cmake  Boost.cmake  BuildBranding.cmake  BuildPackagesInfo.cmake  BuildVersion.cmake  CARes.cmake  CEFPlugin.cmake  CMakeLists.txt  CUDA.cmake  CURL.cmake  Colladadom.cmake  ConfigurePkgConfig.cmake  Copy3rdPartyLibs.cmake  CrashPad.cmake  DBusGlib.cmake  DeploySharedLibs.cmake  EXPAT.cmake  FMODSTUDIO.cmake  FindURIPARSER.cmake  FreeType.cmake  GLH.cmake  GLOD.cmake  GStreamer010Plugin.cmake  GeneratePrecompiledHeader.cmake  GenxCuda.cmake  GenxSqlite.cmake  GooglePerfTools.cmake  Hunspell.cmake  JPEG.cmake  Json.cmake  JsonCpp.cmake  LLAddBuildTest.cmake  LLAudio.cmake  LLCommon.cmake  LLPrimitive.cmake  LLWindow.cmake  LLXML.cmake  LibVLCPlugin.cmake  (+19 more)
indra/genxcuda/: CMakeLists.txt  genxcudamgr.cpp  genxcudamgr.h
indra/genxsqlite/: CMakeLists.txt  llsqlmgr.cpp  llsqlmgr.h
indra/libhacd/: hacdHACD.cpp  hacdMicroAllocator.cpp  hacdRaycastMesh.cpp
indra/libjsoncpp/: CMakeLists.txt  json_tool.h  readme.txt
indra/libndhacd/: CMakeLists.txt
indra/libopenjpeg/: CMakeLists.txt  dwt.c  mct.c  openjpeg.h  opj_includes.h  opj_malloc.h  opj_stdint.h  t1.c  tcd.c
indra/libopenjpeg2/: CMakeLists.txt  opj_config_private.h
indra/libpathing/: CMakeLists.txt
indra/llappearance/: llavatarappearance.cpp  llavatarappearance.h  llavatarappearancedefines.cpp  llavatarappearancedefines.h  llavatarjoint.cpp  llavatarjoint.h  llavatarjointmesh.cpp  llavatarjointmesh.h  lldriverparam.cpp  lldriverparam.h  lllocaltextureobject.cpp  lllocaltextureobject.h  llpolymesh.cpp  llpolymesh.h  llpolymorph.cpp  llpolymorph.h  llpolyskeletaldistortion.cpp  llpolyskeletaldistortion.h  lltexglobalcolor.cpp  lltexglobalcolor.h  lltexlayer.cpp  lltexlayerparams.cpp  lltexlayerparams.h  llviewervisualparam.cpp  llviewervisualparam.h  llwearable.cpp  llwearable.h  llwearabledata.cpp  llwearabledata.h  llwearabletype.cpp  llwearabletype.h
indra/llaudio/: CMakeLists.txt  llaudiodecodemgr.cpp  llaudiodecodemgr.h  llaudioengine.cpp  llaudioengine_fmodstudio.cpp  llaudioengine_fmodstudio.h  llaudioengine_openal.cpp  lllistener.cpp  lllistener.h  lllistener_fmodstudio.cpp  lllistener_fmodstudio.h  lllistener_openal.cpp  llstreamingaudio_fmodstudio.cpp  llstreamingaudio_fmodstudio.h  llvorbisdecode.cpp  llvorbisencode.cpp  llvorbisencode.h
indra/llcharacter/: CMakeLists.txt  llanimationstates.cpp  llbvhloader.cpp  llbvhloader.h  llcharacter.cpp  llcharacter.h  lleditingmotion.cpp  lleditingmotion.h  llgesture.cpp  llgesture.h  llhandmotion.cpp  llheadrotmotion.cpp  llheadrotmotion.h  lljoint.cpp  lljoint.h  lljointsolverrp3.cpp  lljointstate.h  llkeyframemotion.cpp  llkeyframemotion.h  llkeyframestandmotion.cpp  llkeyframestandmotion.h  llkeyframewalkmotion.cpp  llmotion.cpp  llmotion.h  llmotioncontroller.cpp  llmotioncontroller.h  llmultigesture.cpp  llmultigesture.h  llpose.h  llstatemachine.cpp  lltargetingmotion.cpp  llvisualparam.cpp  llvisualparam.h
indra/llcommon/: CMakeLists.txt  aialert.h  aiframetimer.cpp  aiframetimer.h  aisyncclient.cpp  aisyncclient.h  aithreadsafe.h  bitpack.h  indra_constants.cpp  indra_constants.h  is_approx_equal_fraction.h  linden_common.h  llalignedarray.h  llallocator_heap_profile.cpp  llapp.cpp  llapp.h  llapr.cpp  llapr.h  llaprpool.cpp  llaprpool.h  llassettype.cpp  llassettype.h  llatomic.h  llavatarconstants.h  llbase32.cpp  llbase32.h  llbase64.cpp  llbase64.h  llcallbacklist.cpp  llcallbacklist.h  llcoros.cpp  llcoros.h  llcrc.cpp  llcrc.h  llcriticaldamp.cpp  llcriticaldamp.h  lldate.cpp  lldate.h  lldefs.h  lldependencies.cpp  (+109 more)
indra/llimage/: CMakeLists.txt  llimage.cpp  llimage.h  llimagebmp.cpp  llimagedxt.cpp  llimagedxt.h  llimagej2c.h  llimagejpeg.cpp  llimagetga.cpp  llimageworker.cpp  llimageworker.h  llpngwrapper.cpp
indra/llimagej2coj/: CMakeLists.txt  llimagej2coj.cpp  llimagej2coj.h
indra/llinventory/: CMakeLists.txt  llcategory.h  llfoldertype.cpp  llfoldertype.h  llinventory.cpp  llinventory.h  llinventorysettings.cpp  llinventorytype.cpp  llinventorytype.h  llinvtranslationbrdg.h  lllandmark.cpp  lllandmark.h  llnotecard.cpp  llparcel.cpp  llparcel.h  llparcelflags.h  llpermissions.cpp  llpermissions.h  llsaleinfo.cpp  llsaleinfo.h  llsettingsbase.cpp  llsettingsbase.h  llsettingsdaycycle.cpp  llsettingsdaycycle.h  llsettingssky.cpp  llsettingssky.h  llsettingstype.cpp  llsettingstype.h  llsettingswater.cpp  llsettingswater.h  lltransactionflags.cpp
indra/llmath/: CMakeLists.txt  llcalc.h  llcalcparser.h  llcamera.cpp  llcamera.h  llcoordframe.cpp  llline.cpp  llmath.h  llmatrix3a.h  llmatrix4a.h  lloctree.h  llperlin.cpp  llperlin.h  llplane.h  llquantize.h  llquaternion.cpp  llquaternion.h  llquaternion2.h  llsimdtypes.h  lltreenode.h  llvector4a.h  llvector4a.inl  llvector4logical.h  llvolume.cpp  llvolume.h  llvolumemgr.cpp  llvolumemgr.h  llvolumeoctree.cpp  llvolumeoctree.h  m3math.h  m4math.cpp  m4math.h  v2math.cpp  v2math.h  v3color.h  v3dmath.h  v3math.cpp  v3math.h  v4color.cpp  v4color.h  (+4 more)
indra/llmessage/: CMakeLists.txt  aicurl.cpp  aicurlperservice.cpp  aicurlperservice.h  aicurlprivate.h  aicurlthread.cpp  aicurlthread.h  aihttptimeout.cpp  aihttptimeoutpolicy.cpp  llares.cpp  llassetstorage.cpp  llassetstorage.h  llavatarname.cpp  llavatarname.h  llavatarnamecache.cpp  llavatarnamecache.h  llbuffer.cpp  llbuffer.h  llbufferstream.cpp  llbufferstream.h  llcachename.cpp  llcachename.h  llcircuit.cpp  llcircuit.h  llcorebufferarray.cpp  llcorebufferarray.h  llcorebufferstream.cpp  llcorebufferstream.h  llcorehttpcommon.cpp  llcorehttpcommon.h  llcorehttphandler.h  llcorehttpheaders.cpp  llcorehttpheaders.h  llcorehttpinternal.h  llcorehttplibcurl.cpp  llcorehttplibcurl.h  llcorehttpopcancel.cpp  llcorehttpopcancel.h  llcorehttpoperation.h  (+79 more)
(+2033 files in other folders)
